src/MEGASync/gui/style/WidgetsComponentsStyleSheetsTokens.css
QWidget[type="notification"]
{
background-color: #ffdff4fe;/*colorToken.notification-info*/
}

QWidget[type="notification"][error="true"]
{
background-color: #ffffe4e8;/*colorToken.notification-error*/
}

/*
    QTableView
*/
QTableView
{
color: #ff303233; /*colorToken.text-primary*/
background-color: transparent;
border: 1px solid #ff18191A; /*colorToken.page-background*/
selection-color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
selection-background-color: transparent;
}

QTableView::item::selected
{
color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
background-color: transparent;
}

QTableView::indicator:checked
{
image: url(:/images/themed/light/checkbox_on.svg); /*replaceThemeToken*/
}

QTableView::indicator:checked:hover
{
image: url(:/images/themed/light/checkbox_on_hover.svg); /*replaceThemeToken*/
}

QTableView::indicator:checked:pressed
{
image: url(:/images/themed/light/checkbox_on_pressed.svg); /*replaceThemeToken*/
}

QTableView::indicator:checked:disabled
{
image: url(:/images/themed/light/checkbox_on_disabled.svg); /*replaceThemeToken*/
}

QTableView::indicator:unchecked
{
image: url(:/images/themed/light/checkbox_off.svg); /*replaceThemeToken*/
}

QTableView::indicator:unchecked:hover
{
image: url(:/images/themed/light/checkbox_off_hover.svg); /*replaceThemeToken*/
}

QTableView::indicator:unchecked:pressed
{
image: url(:/images/themed/light/checkbox_off_pressed.svg); /*replaceThemeToken*/
}

QTableView::indicator:unchecked:disabled
{
image: url(:/images/themed/light/checkbox_off_disabled.svg); /*replaceThemeToken*/
}

/*
    QScrollBar
*/

QScrollBar
{
background: transparent;
}

QScrollBar::handle:vertical
{
background: #ff04101E; /*colorToken.button-primary*/
}
QScrollBar::handle:vertical:hover
{
background: #ff39424E; /*colorToken.button-primary-hover*/
}
QScrollBar::handle:vertical:pressed
{
background: #ff535B65; /*colorToken.button-primary-pressed*/
}
QScrollBar::handle:horizontal
{
background: #ff04101E; /*colorToken.button-primary*/
}
QScrollBar::handle:horizontal:hover
{
background: #ff39424E; /*colorToken.button-primary-hover*/
}
QScrollBar::handle:horizontal:pressed
{
background: #ff535B65; /*colorToken.button-primary-pressed*/
}

/*
    QHeaderView
*/
QHeaderView
{
background: #FF18191A; /*colorToken.page-background*/
}

QHeaderView::section
{
background: #FF18191A; /*colorToken.page-background*/
color: #FFF3F4F4; /*colorToken.text-primary*/
}

QHeaderView::up-arrow
{
image: url(:/images/themed/light/spinbox_up_arrow.svg); /*replaceThemeToken*/
}

QHeaderView::down-arrow
{
image: url(:/images/themed/light/spinbox_down_arrow.svg); /*replaceThemeToken*/
}


/*
    QComboBox
*/
QComboBox::item:selected[type="mega"]
{
background-color: #fff3f4f4; /*colorToken.surface-2*/
}

QComboBox::item[type="mega"]
{
background-color: #fffafafa; /*colorToken.surface-1*/;
}

QComboBox[type="mega"]
{
background-color: #ffFFFFFF; /*colorToken.page-background*/
color: #ff333333; /*colorToken.text-primary*/
border-color: #ff04101E; /*colorToken.button-outline*/
}

QComboBox:disabled[type="mega"]
{
color: #ff797c80; /*colorToken.text-disabled*/
border-color: #ffe5e5e5; /*colorToken.button-disabled*/
}

QComboBox::drop-down[type="mega"]
{
image: url(:/chevron-down_default);
}

QComboBox::drop-down:disabled[type="mega"]
{
image: url(:/chevron-down_disabled);
}

QComboBox::drop-down:hover[type="mega"]
{
image: url(:/chevron-down_hover);
}

QComboBox::drop-down:pressed[type="mega"]
{
image: url(:/chevron-down_press);
}

QComboBox[type="mega"] QAbstractItemView
{
border: 2px solid #ff04101E; /*colorToken.button-outline*/
background-color:  #fffafafa; /*colorToken.surface-1*/
}

/*
    QRadioButton
*/
QRadioButton
{
color: #ff303233; /*colorToken.text-primary*/
background-color: transparent;
}

QRadioButton:disabled
{
color: #ff797c80; /*colorToken.icon-disabled*/
}

QRadioButton::indicator::unchecked
{
image: url(:/images/themed/light/radio_unchecked.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:unchecked:hover
{
image: url(:/images/themed/light/radio_unchecked_hover.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:unchecked:pressed
{
image: url(:/images/themed/light/radio_unchecked_pressed.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:unchecked:disabled
{
image: url(:/images/themed/light/radio_unchecked_disabled.svg); /*replaceThemeToken*/
}

QRadioButton::indicator::checked
{
image: url(:/images/themed/light/radio_checked.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:checked:hover
{
image: url(:/images/themed/light/radio_checked_hover.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:checked:pressed
{
image: url(:/images/themed/light/radio_checked_pressed.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:checked:disabled
{
image: url(:/images/themed/light/radio_checked_disabled.svg); /*replaceThemeToken*/
}

/*
    QGroupBox
*/
QGroupBox[type="mega"]
{
border-color: #ffd8d9db; /*colorToken.border-strong*/
background-color: transparent;
}

QGroupBox::title[type="mega"]
{
color: #ff04101E; /*colorToken.text-accent*/
}

QGroupBox::title:disabled[type="mega"]
{
color: #ff797c80; /*colorToken.text-disabled*/
}

/*
    QProgressBar
*/
QProgressBar
{
/* TODO: surface-2 should be replaced by --color-indicator-background */
background-color: #E4E4E5; /*colorToken.surface-3*/
}

QProgressBar::chunk
{
background-color: #09BF5B; /*colorToken.indicator-green*/
}

/*
    QCheckBox
*/

QCheckBox[type="mega"]
{
color: #F3F4F4; /*colorToken.text-primary*/
}

QCheckBox[type="mega"][error="true"]
{
color: #ffe31b57; /*colorToken.text-error*/
}

QCheckBox:disabled[type="mega"]
{
color: #ff797c80; /*colorToken.icon-disabled*/
}

QCheckBox::indicator:checked[type="mega"]
{
image: url(:/images/themed/light/checkbox_on.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:checked:hover[type="mega"]
{
image: url(:/images/themed/light/checkbox_on_hover.svg); /*replaceThemeToken*/
}
/* ... */

